feat: add targeted asset for squid onboard form

--- a/apps/trading/pages/styles.css
+++ b/apps/trading/pages/styles.css
@@ -243,6 +243,7 @@
     /* Border radius */
     --panel-border-radius: theme(borderRadius.lg);
     --grid-border-radius: theme(borderRadius.lg);
+    --input-border-radius: theme(borderRadius.lg);
   }
 
   .dark {
